force-app/main/default/objects/Content__c/fields/Cast__c.field-meta.xml
<CustomField>
    <fullName>Cast__c</fullName>
    <label>Cast</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>