force-app/main/default/objects/Content__c/fields/Content_status__c.field-meta.xml
<CustomField>
    <fullName>Content_status__c</fullName>
    <label>Content status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>