force-app/main/default/objects/Content__c/fields/Content_type__c.field-meta.xml
<CustomField>
    <fullName>Content_type__c</fullName>
    <label>Content type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Movie</fullName>
            </value>
            <value>
                <fullName>Serie</fullName>
            </value>
            <value>
                <fullName>Documentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>