force-app/main/default/objects/Content__c/fields/IMDBId__c.field-meta.xml
<CustomField>
    <fullName>IMDBId__c</fullName>
    <externalId>true</externalId>
    <label>IMDBId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>