force-app/main/default/objects/Content__c/fields/Movie_poster_image__c.field-meta.xml
<CustomField>
    <fullName>Movie_poster_image__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Movie_poster_url__c)),
    IMAGE(Movie_poster_url__c, &quot;Image&quot;, 276, 186),
    &quot;No Image Is Captured&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Movie poster image</label>
    <type>Text</type>
</CustomField>