force-app/main/default/objects/Content__c/fields/Movie_poster_url__c.field-meta.xml
<CustomField>
    <fullName>Movie_poster_url__c</fullName>
    <label>Movie poster url</label>
    <type>Url</type>
</CustomField>