force-app/main/default/objects/Content__c/fields/Publication_date__c.field-meta.xml
<CustomField>
    <fullName>Publication_date__c</fullName>
    <label>Publication date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>