force-app/main/default/objects/Content__c/recordTypes/Serie.recordType-meta.xml
<RecordType>
    <fullName>Serie</fullName>
    <active>true</active>
    <label>Serie</label>
</RecordType>