force-app/main/default/objects/Content__c/listViews/Active_series.listView-meta.xml
<ListView>
    <fullName>Active_series</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>IMDBId__c</columns>
    <columns>Duration__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Content__c.Serie</value>
    </filters>
    <filters>
        <field>Content_status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active series</label>
</ListView>